change .env file and README.md

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT=5432
-HOST=localhost
-USER=pavelbutorin
-DB=trello-api
-PASSWORD=root
-PRIVATE_KEY=secret_key_8ijkn
+PORT=
+HOST=
+USER=
+DB=
+PASSWORD=
+PRIVATE_KEY=
